--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,18 @@ cmake_minimum_required(VERSION 3.10)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+#调试信息
+set(CMAKE_BUILD_TYPE Debug)
+#set(CMAKE_BUILD_TYPE RelWithDebInfo)
+#set(CMAKE_BUILD_TYPE Release)
+
+#添加宏
+if (CMAKE_BUILD_TYPE STREQUAL Debug)
+    add_definitions(
+        -D_DEBUG
+    )
+endif()
+
 project(Test VERSION 0.6)
 
 #项目版本配置
